--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+#spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/views/
 
 
 ########################################################
