--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,23 @@
 			<artifactId>shiro-spring</artifactId>
 			<version>1.2.2</version>
 		</dependency>
+		<!-- shiro ehcache -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-ehcache</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		<!--
+                   包含支持UI模版（Velocity，FreeMarker，JasperReports），
+                   邮件服务，
+                   脚本服务(JRuby)，
+                   缓存Cache（EHCache），
+                   任务计划Scheduling（uartz）。
+                -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
 
 		<!-- Spirng data JPA依赖; -->
 		<dependency>
