--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,12 @@
 			<artifactId>nekohtml</artifactId>
 			<version>1.9.22</version>
 		</dependency>
-
+		<!--google的验证码框架-->
+		<dependency>
+			<groupId>com.google.code.kaptcha</groupId>
+			<artifactId>kaptcha</artifactId>
+			<version>2.3</version>
+		</dependency>
 
 		<!--shiro-->
 		<dependency>
